# GameOfLife

./: .gitignore  CMakeLists.txt  main.cpp  version.json
GameState/: GameOfLifeState.cpp  GameOfLifeState.h
Modules/CommandLineGui/Commands/: BaseCommandHandler.ixx
Modules/GameOfLife/: GameOfLifeContext.ixx  GameOfLifeManager.ixx  GameOfLifeState.ixx
Modules/GameOfLife/Cells/: BaseCell.ixx  BaseCellFactoryMethod.ixx  CellContext.fwd.ixx  CellContext.ixx
Modules/GameState/: BoardContext.ixx  GameOfLifeState.ixx
Modules/GameWrapper/: GameOfLifeWrapper.ixx
Modules/GameWrapper/Commands/: BaseCommandHandler.ixx
Modules/Utilities/: Point.ixx  Registry.ixx  SingletonRegistry.ixx
Utilities/: Point.h  Point.ixx  Registry.h  Registry.ixx
